<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/promentorSite">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="40sp"
        android:layout_centerHorizontal="true"
        android:text="@string/topic"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_below="@id/textView"
        android:onClick="gotoTheme1"
        android:text="@string/topic1"
        android:layout_marginBottom="20dp"
        style="@style/button"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_below="@id/button"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:onClick="gotoSpell"
        android:text="@string/topic2"
        android:layout_marginBottom="20dp"
        style="@style/button"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_below="@id/button3"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20sp"
        android:layout_marginStart="20sp"
        android:onClick="gotoTheme3"
        android:text="@string/topic3"
        android:layout_marginBottom="20dp"
        style="@style/button"/>
</RelativeLayout>