<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout3"
    android:background="@color/promentorSite">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/toolbar"
        android:text="@string/tap_on_mic"
        android:textSize="20sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textToSpeak"
        android:layout_width="wrap_content"
        android:maxWidth="350dp"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="20sp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp" />

    <TextView
        android:id="@+id/txtSpeechInput"
        android:layout_width="wrap_content"
        android:maxWidth="350dp"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:textStyle="normal"
        android:layout_above="@+id/start"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/start"
        android:background="@drawable/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_conversation"
        android:textSize="20sp"
        android:layout_marginBottom="18dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_above="@+id/btnSpeak"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/btnSpeak"
        android:background="@drawable/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Answer"
        android:textSize="20sp"
        android:layout_marginBottom="99dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
